Issue #4028: Make multiprocessing build on SunOS.